# cmrdesign

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  LICENSE-text.html  LICENSE-text.md  README.md  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
.github/ISSUE_TEMPLATE/: alpha_feedback.yml  bug_report.yml  config.yml  usage_question.yml
.github/workflows/: README.md  fixtures.yml  pkgdown.yml  python.yml  r.yml  validation.yml
articles/: binary-outcomes.html  binary-outcomes.md  extensions.html  extensions.md  index.html  index.md  multiple-outcomes.html  multiple-outcomes.md  pilot-planning.html  pilot-planning.md  proxy-outcomes.html  proxy-outcomes.md  two-arm-bounded.html  two-arm-bounded.md
docs/: choosing_methods.md  cran_readiness.md  faq.md  index.md  methods.md  pilot_planning.md  python_release.md  quickstart.md  release_checklist.md
docs/dev/: cran_readiness.md  python_release.md  release_checklist.md
examples/python/: 01_two_arm_bounded.py  02_binary_outcomes.py  03_mtr_vs_mp.py  04_multiarm.py  05_stratified.py  06_multiple_outcomes.py  07_proxy_outcome.py  08_pilot_planning.py  09_unbounded_outcomes.py
examples/r/: 01_two_arm_bounded.R  02_binary_outcomes.R  03_mtr_vs_mp.R  04_multiarm.R  05_stratified.R  06_multiple_outcomes.R  07_proxy_outcome.R  08_pilot_planning.R  09_unbounded_outcomes.R
news/: index.html  index.md
python/: LICENSE  README.md  pyproject.toml
python/src/cmrdesign/: __init__.py  core.py  multiarm.py  multiple_outcomes.py  planning.py  proxy.py  rectangles.py  results.py  solver.py  stratified.py  two_arm.py  unbounded.py  validation.py  variance_bounds.py
python/tests/: test_cross_fixtures.py  test_multiarm.py  test_multiple_outcomes.py  test_planning.py  test_proxy.py  test_public_api.py  test_rectangles_bernoulli.py  test_rectangles_mp.py  test_rectangles_mtr.py  test_results.py  test_stratified.py  test_two_arm.py  test_unbounded.py
r/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  cran-comments.md
r/R/: baseline_rules.R  cmr_multiarm.R  cmr_multiple_outcomes.R  cmr_plan.R  cmr_proxy.R  cmr_stratified.R  cmr_two_arm.R  cmr_unbounded.R  core_variance.R  metrics.R  package.R  print_summary.R  rectangles_bernoulli.R  rectangles_bounded.R  rectangles_multiarm.R  rectangles_multiple_outcomes.R  rectangles_proxy.R  rectangles_stratified.R  solver_epigraph.R  validation.R  variance_bounds_mp.R  variance_bounds_mtr.R
r/inst/: CITATION  WORDLIST
r/man/: activation_threshold_bounded.Rd  assign_balance.Rd  binary_rectangle_corners.Rd  break_even_pilot_share.Rd  cmr_multiarm.Rd  cmr_multiarm_from_rectangle.Rd  cmr_multiple_outcomes.Rd  cmr_proxy.Rd  cmr_stratified.Rd  cmr_stratified_from_rectangle.Rd  cmr_two_arm.Rd  (+21 more)
reference/: activation_threshold_bernoulli.html  activation_threshold_bounded.html  activation_threshold_bounded.md  assign_balance.html  assign_balance.md  assign_exponential_regularized_neyman.html  binary_rectangle_corners.html  binary_rectangle_corners.md  binary_rectangle_regret.html  boundary_rate.html  break_even_pilot_share.html  break_even_pilot_share.md  cmr_binary.html  cmr_delayed_outcome.html  cmr_multiarm.html  cmr_multiarm.md  cmr_multiarm_from_rectangle.html  cmr_multiarm_from_rectangle.md  cmr_multiple_outcomes.html  cmr_multiple_outcomes.md  cmr_plan.html  cmr_proxy.html  cmr_proxy.md  cmr_stratified.html  cmr_stratified.md  cmr_stratified_from_rectangle.html  cmr_stratified_from_rectangle.md  cmr_two_arm.html  cmr_two_arm.md  cmr_unbounded.html  cmr_unbounded.md  cmr_unbounded_from_rectangle.html  cmr_unbounded_from_rectangle.md  cmrdesign-package.html  cmrdesign-package.md  cmrdesign.html  coverage_indicator.html  coverage_indicator.md  folded_binomial_pmf.html  folded_binomial_pmf.md  (+42 more)
spec/: README.md  api_freeze_review.md  api_review.md  api_spec.md  math_spec.md  numerical_tolerances.md  return_objects.md
validation/: README.md  check_reference_values.R  check_reference_values.py
(+33 files in other folders)
